# insightpipe

./: .gitignore  DevelopmentNotes.md  README-devtools.md  README.md  app.py  config.py  config.yaml  config2.yaml  config_detection.yaml  config_import.yaml  downlload_models.sh  image.b64  insightpipe.py  main.py  ollama_test.py  pyproject.toml  req_to_toml.awk  requirements.txt  test_external_keywords.py  testorftojpg.py
analyzer/: __init__.py
assets/: AIProjectSummary.md  detections.txt  models.txt  prompts.txt  prompts.yaml
processed/: _OM17138.xmp
publisher/: __init__.py
scripts/: check_insightpipe_jobs.sh  check_insightpipe_services.sh  copy_to_ready_to_process.py  extract_descriptions_to_file.py  insightpipe-app.service  insightpipe-detection.service  insightpipe-import.service  install-services.sh  run-app.sh  run-insightpipe-import.sh  run-insightpipe-wildlife.sh  run-insightpipe.sh  run_test_matrix.py  start-app.sh  start-insightpipe-detection.sh  start-insightpipe-import.sh  subscriber.py
static/: chat.css  style.css
tagger/: __init__.py
templates/: chat.html  detail.html  index.html
tests/: test_analyzer.py  test_publisher.py  test_utils.py
tools/: requirements_audit.py
utils/: __init__.py
