[project]
name = "insightpipe"
version = "0.1.0"
description = "LLM image processing"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4==4.13.4",
    "black==25.1.0",
    "blinker==1.9.0",
    "bs4==0.0.2",
    "cachelib==0.13.0",
    "certifi==2025.6.15",
    "charset-normalizer==3.4.2",
    "click==8.2.1",
    "Flask==3.1.1",
    "Flask-Session==0.8.0",
    "idna==3.10",
    "imageio==2.37.0",
    "iniconfig==2.1.0",
    "itsdangerous==2.2.0",
    "Jinja2==3.1.6",
    "Markdown==3.8.2",
    "MarkupSafe==3.0.2",
    "msgspec==0.19.0",
    "mypy_extensions==1.1.0",
    "numpy==2.3.1",
    "packaging==25.0",
    "paho-mqtt==2.1.0",
    "pathspec==0.12.1",
    "pillow==11.3.0",
    "platformdirs==4.3.8",
    "pluggy==1.6.0",
    "Pygments==2.19.2",
    "pytest==8.4.1",
    "python-dotenv==1.1.1",
    "PyYAML==6.0.2",
    "rawpy==0.25.0",
    "redis==6.2.0",
    "requests==2.32.4",
    "setuptools==80.9.0",
    "soupsieve==2.7",
    "typing_extensions==4.14.1",
    "urllib3==2.5.0",
    "Werkzeug==3.1.3",

]
[tool.setuptools.packages.find]
include = ["tagger", "analyzer", "publisher", "utils"]
exclude = ["assets", "static", "templates", "db", "scanned", "temp_batch", "tests", "results", "__pycache__"]
